--- a/index.Rmd
+++ b/index.Rmd
@@ -28,7 +28,7 @@ description: "A textbook for STAT 542 and 432 at UIUC"
 
 # Preface {-}
 
-Welcome to *Statistical Learning and Machine Learning with R*! I started this project during the summer of 2018 when I was preparing for the Stat 432 course. At that time, our faculty member [Dr. David Dalpiaz](https://daviddalpiaz.com/teaching.html), had decided to move to The Ohio State University (although he later on moved back to UIUC). David introduced to me this awesome way of publishing website on GitHub, which is a very efficient approach for developing courses. Since I was also teaching Stat 542 (Statistical Learning) for several years, I figured it could be beneficial to integrate what I have to this [existing book](https://daviddalpiaz.github.io/r4sl/) by David and use it as the R material for both courses. For Stat 542, the main focus is to learn the numerical optimization behind these learning algorithms, and also be familiar with the theoretical background. As you can tell, I am not being very creative on the name, so `SMLR' it is. You can find the source file of this book on my [GitHub](https://teazrq.github.io/SMLR/).
+Welcome to *Statistical Learning and Machine Learning with R*! I started this project during the summer of 2018 when I was preparing for the Stat 432 course. At that time, our faculty member [Dr. David Dalpiaz](https://daviddalpiaz.com/teaching.html), had decided to move to The Ohio State University (although he later on moved back to UIUC). David introduced to me this awesome way of publishing website on GitHub, which is a very efficient approach for developing courses. Since I was also teaching Stat 542 (Statistical Learning) for several years, I figured it could be beneficial to integrate what I have to this [existing book](https://daviddalpiaz.github.io/r4sl/) by David and use it as the R material for both courses. For Stat 542, the main focus is to learn the numerical optimization behind these learning algorithms, and also be familiar with the theoretical background. As you can tell, I am not being very creative on the name, so `SMLR` it is. You can find the source file of this book on my [GitHub](https://teazrq.github.io/SMLR/).
 
 ## Target Audience {-}
 
@@ -52,7 +52,7 @@ The goal of this book is to introduce not only how to run some of the popular st
 It will be served as a supplement to [An Introduction to Statistical Learning](http://www-bcf.usc.edu/~gareth/ISL/) [@james2013introduction] for [STAT 432 - Basics of Statistical Learning](https://go.illinois.edu/stat432) and to [The Elements of 
 Statistical Learning: Data Mining, Inference, and Prediction](https://web.stanford.edu/~hastie/ElemStatLearn/) [@hastie2001elements] for [STAT 542 - Statistical Learning](https://go.illinois.edu/stat542) at the [University of Illinois at Urbana-Champaign](http://illinois.edu/).
 
-**This book is under active development**. Hence, you may encounter errors ranging from typos to broken code, to poorly explained topics. If you do, please let me know! Simply send an email and I will make the changes as soon as possible (`rqzhu AT illinois DOT edu`). Or, if you know `R Markdown` and are familiar with GitHub, [make a pull request and fix an issue yourself!](https://github.com/teazrq/SLWR). These contributions will be acknowledged. 
+**This book is under active development**. Hence, you may encounter errors ranging from typos to broken code, to poorly explained topics. If you do, please let me know! Simply send an email and I will make the changes as soon as possible (`rqzhu AT illinois DOT edu`). Or, if you know `R Markdown` and are familiar with GitHub, [make a pull request and fix an issue yourself](https://github.com/teazrq/SLWR)! These contributions will be acknowledged. 
 
 ## Acknowledgements {-}
 
