--- a/book.bib
+++ b/book.bib
@@ -101,3 +101,14 @@
   year={1970},
   publisher={Taylor \& Francis}
 }
+
+@article{golub1979generalized,
+  title={Generalized cross-validation as a method for choosing a good ridge parameter},
+  author={Golub, Gene H and Heath, Michael and Wahba, Grace},
+  journal={Technometrics},
+  volume={21},
+  number={2},
+  pages={215--223},
+  year={1979},
+  publisher={Taylor \& Francis}
+}
