--- a/05-ridge.Rmd
+++ b/05-ridge.Rmd
@@ -44,7 +44,7 @@
 
 # Ridge Regression
 
-Ridge regression was proposed by @hoerl1970ridge, but is also a special case of Tikhonov regularization. The essential idea is very simple: Knowing the ordinary least squares (OLS) solution, a ridge regression is adding a ridge on the diagonal elements of $\bX^\T \bX$ so that it becomes invertible:
+Ridge regression was proposed by @hoerl1970ridge, but is also a special case of Tikhonov regularization. The essential idea is very simple: Knowing that the ordinary least squares (OLS) solution is not unique in an ill-posed problem, i.e., $\bX^\T \bX$ is not invertible, a ridge regression adds a ridge (diagonal matrix) on $\bX^\T \bX$:
 
 $$\widehat{\bbeta}^\text{ridge} = (\bX^\T \bX + n \lambda \bI)^{-1} \bX^\T \by,$$
 It provides a solution of linear regression when multicollinearity happens, especially when the number of variables is larger than the sample size. Alternatively, this is also the solution of a regularized least square estimator. We add an $\ell_2$ penalty to the residual sum of squares, i.e., 
@@ -56,11 +56,11 @@ $$
 \end{align}
 $$
 
-for some penalty $\lambda > 0$. Ridge regression is used extensively in genetic analysis to address such difficulties. We will start with a motivation example and then discuss the bias-variance trade-off issue. 
+for some penalty $\lambda > 0$. Another approach that leads to the ridge regression is a constraint on the $\ell_2$  norm of the parameters, which will be introduced in the next Chapter. Ridge regression is used extensively in genetic analyses to address "small-$n$-large-$p$" problems. We will start with a motivation example and then discuss the bias-variance trade-off issue. 
 
 ## Motivation: Correlated Variables and Convexity
 
-Ridge regression has many advantages. Most notably, it can address highly correlated variables. From an optimization point of view, having highly correlated variables means that the objective function ($\ell_2$ loss) becomes "flat" along certain directions in the parameter domain. This can be seen from the following example, where the true parameters are both 1s while the estimated parameters concludes almost all effects to the first variable. You can change different seed to observe the variability of these parameter estimates and notice that they are quite large. Instead, if we fit a ridge regression, the parameter estimates are relatively stable.  
+Ridge regression has many advantages. Most notably, it can address highly correlated variables. From an optimization point of view, having highly correlated variables means that the objective function ($\ell_2$ loss) becomes "flat" along certain directions in the parameter domain. This can be seen from the following example, where the true parameters are both $1$ while the estimated parameters concludes almost all effects to the first variable. You can change different seed to observe the variability of these parameter estimates and notice that they are quite large. Instead, if we fit a ridge regression, the parameter estimates are relatively stable.  
 
 ```{r}
   library(MASS)
